fixed spacing to reactivate homebtn

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -35,7 +35,6 @@ body {
     padding-top: 20px;
 }
 #sidebar-comparison{
-    position: fixed;
     margin-left: 2%;
 
 }
